# rodin-hs

./: .gitmodules  README.md  cabal.project
proof-read/: proof-read.cabal
proof-read/src/: Main.hs
proof-read/src/Rodin/: ProofTree.hs
proof-read/src/Rodin/ProofTree/: Arrange.hs  Folder.hs  Printer.hs  Registry.hs  Stats.hs  Util.hs
rodin-api/: README.md  Setup.hs  rodin-api.cabal
rodin-api/src/Rodin/: Ascii.hs  Context.hs  Formula.hs  Machine.hs  ProofObligations.hs  Proofs.hs  Theory.hs
rodin-api/src/Rodin/Context/: Ascii.hs  Read.hs
rodin-api/src/Rodin/Formula/: Ascii.hs  Tokenizer.hs  UTF8.hs
rodin-api/src/Rodin/Formula/Internal/: Util.hs
rodin-api/src/Rodin/Formula/Tokenizer/: Error.hs  FTk.hs
rodin-api/src/Rodin/Internal/: Util.hs  Wrap.hs  XML.hs
rodin-api/src/Rodin/Machine/: Ascii.hs  Read.hs
rodin-api/src/Rodin/ProofObligations/: Ascii.hs  Read.hs
rodin-api/src/Rodin/Proofs/: Ascii.hs  Read.hs
rodin-api/src/Rodin/Theory/: Ascii.hs  Read.hs
rodin-read/: README.md  rodin-read.cabal
rodin-read/latex/: example-main.tex
rodin-read/src/: Main.hs  Options.hs
rodin-read/src/Rodin/: Substitution.hs
rodin-read/src/Rodin/Context/: Substitution.hs
rodin-read/src/Rodin/Formula/: Substitution.hs
rodin-read/src/Rodin/Machine/: Substitution.hs
rodin-read/src/Rodin/ProofObligations/: Substitution.hs
rodin-read/src/Rodin/Substitution/: Label.hs
rodin-read/src/Rodin/Theory/: Substitution.hs
rodin-tex/: README.md  Setup.hs  rodin-tex.cabal
rodin-tex/latex/: rodinlisting.tex
rodin-tex/src/Rodin/: TeX.hs
rodin-tex/src/Rodin/Context/: TeX.hs
rodin-tex/src/Rodin/Formula/: TeX.hs
rodin-tex/src/Rodin/Machine/: TeX.hs
rodin-tex/src/Rodin/ProofObligations/: TeX.hs
rodin-tex/src/Rodin/Theory/: TeX.hs
