cabal-version:       3.0
-------------------------------------------------------------------------
-- Copyright (C) 2023  G. Dupont
-- 
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU General Public License as published by
-- the Free Software Foundation, either version 3 of the License, or
-- (at your option) any later version.
-- 
-- This program is distributed in the hope that it will be useful,
-- but WITHOUT ANY WARRANTY; without even the implied warranty of
-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-- GNU General Public License for more details.
-- 
-- You should have received a copy of the GNU General Public License
-- along with this program.  If not, see <https://www.gnu.org/licenses/>.
-------------------------------------------------------------------------
-- .cabal file for the rodin-read executable
-- Maintainer: guillaume.dupont@irit.fr
-------------------------------------------------------------------------
name:                proof-read
version:             0.1.0.0
synopsis:            Parsing Rodin proofs and making stats
homepage:            https://www.irit.fr/~Guillaume.Dupont/
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              Guillaume Dupont
maintainer:          guillaume.dupont55@gmail.com
category:            Utility
copyright:           Copyright (c) 2023 G. Dupont
build-type:          Simple
extra-source-files:  README.md

executable proof-read
  main-is:              Main.hs
  other-modules:        Rodin.ProofTree, Rodin.ProofTree.Arrange,
                        Rodin.ProofTree.Registry, Rodin.ProofTree.Util,
                        Rodin.ProofTree.Folder, Rodin.ProofTree.Printer,
                        Rodin.ProofTree.Stats
  build-depends:        base ==4.*,
                        containers ==0.5.*,
                        split ==0.2.*,
                        rodin-api
  hs-source-dirs:       src
  default-language:     Haskell2010


