cabal-version:       3.0
-------------------------------------------------------------------------
-- Copyright (C) 2019  G. Dupont
-- 
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU General Public License as published by
-- the Free Software Foundation, either version 3 of the License, or
-- (at your option) any later version.
-- 
-- This program is distributed in the hope that it will be useful,
-- but WITHOUT ANY WARRANTY; without even the implied warranty of
-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-- GNU General Public License for more details.
-- 
-- You should have received a copy of the GNU General Public License
-- along with this program.  If not, see <https://www.gnu.org/licenses/>.
-------------------------------------------------------------------------
-- .cabal file for the rodin-read executable
-- Maintainer: guillaume.dupont@irit.fr
-------------------------------------------------------------------------
name:                rodin-read
version:             0.1.0.0
synopsis:            Reading/Transformation tool for dealing with Rodin files
homepage:            https://www.irit.fr/~Guillaume.Dupont/
license:             GPL-3.0-or-later
license-file:        ../LICENSE
author:              Guillaume Dupont
maintainer:          guillaume.dupont55@gmail.com
category:            Utility
copyright:           Copyright (c) 2021 G. Dupont
build-type:          Simple
extra-source-files:  README.md

executable rodin-read
  main-is:             Main.hs
  other-modules:       Options,
                       Rodin.Substitution, Rodin.Substitution.Label,
                       Rodin.Formula.Substitution, Rodin.Context.Substitution,
                       Rodin.Machine.Substitution, Rodin.Theory.Substitution,
                       Rodin.ProofObligations.Substitution
  build-depends:       base ==4.*, split >=0.2 && <0.3,
                       containers >=0.5 && <0.6, transformers >= 0.5,
                       rodin-api, rodin-tex, substitution
  hs-source-dirs:      src
  default-language:    Haskell2010
