cabal-version:         3.0
-------------------------------------------------------------------------
-- Copyright (C) 2020  G. Dupont
-- 
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU General Public License as published by
-- the Free Software Foundation, either version 3 of the License, or
-- (at your option) any later version.
-- 
-- This program is distributed in the hope that it will be useful,
-- but WITHOUT ANY WARRANTY; without even the implied warranty of
-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-- GNU General Public License for more details.
-- 
-- You should have received a copy of the GNU General Public License
-- along with this program.  If not, see <https://www.gnu.org/licenses/>.
-------------------------------------------------------------------------
-- .cabal file for the rodinapi-tex package
-- Maintainer: guillaume.dupont@irit.fr
-------------------------------------------------------------------------
name:                  rodin-tex
version:               0.1.0.0
synopsis:              RodinAPI extension for exporting Event-B structures in LaTeX
description:           Extension of the rodinapi package for exporting Event-B structure in LaTeX
license:               GPL-3.0-or-later
license-file:          ../LICENSE
author:                Guillaume Dupont
maintainer:            guillaume.dupont@irit.fr
copyright:             Copyright (c) 2021 G. Dupont
build-type:            Simple
extra-source-files:    README.md

library
  exposed-modules:
    Rodin.TeX, Rodin.Formula.TeX, Rodin.Context.TeX, Rodin.Machine.TeX,
    Rodin.ProofObligations.TeX, Rodin.Theory.TeX
  build-depends:
    base ==4.*, rodin-api
  hs-source-dirs:      src
  default-language:    Haskell2010
